; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/geode/extr_display_gx1.c_gx1_read_conf_reg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/geode/extr_display_gx1.c_gx1_read_conf_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gx1_conf_reg_lock = common dso_local global i32 0, align 4
@CONFIG_CCR3 = common dso_local global i32 0, align 4
@CONFIG_CCR3_MAPEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @gx1_read_conf_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gx1_read_conf_reg(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %6 = load i64, i64* %5, align 8
  %7 = call i32 @spin_lock_irqsave(i32* @gx1_conf_reg_lock, i64 %6)
  %8 = load i32, i32* @CONFIG_CCR3, align 4
  %9 = call i32 @outb(i32 %8, i32 34)
  %10 = call i32 @inb(i32 35)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* @CONFIG_CCR3, align 4
  %12 = call i32 @outb(i32 %11, i32 34)
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @CONFIG_CCR3_MAPEN, align 4
  %15 = or i32 %13, %14
  %16 = call i32 @outb(i32 %15, i32 35)
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @outb(i32 %17, i32 34)
  %19 = call i32 @inb(i32 35)
  store i32 %19, i32* %3, align 4
  %20 = load i32, i32* @CONFIG_CCR3, align 4
  %21 = call i32 @outb(i32 %20, i32 34)
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @outb(i32 %22, i32 35)
  %24 = load i64, i64* %5, align 8
  %25 = call i32 @spin_unlock_irqrestore(i32* @gx1_conf_reg_lock, i64 %24)
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @outb(i32, i32) #1

declare dso_local i32 @inb(i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
